tests/paczka1/small_fuzzy/70694437.err
Error in line 10: YY8E S513 5092
Error in line 14: S513 S513 77,5
